move ftp config to scheduler

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -5,11 +5,9 @@ Watcher:
     - 
       name: drop
       listener: ./lib/schedule_digester
-    - 
-      name: drop2
-      listener: ./lib/schedule_digester
-ScheduleDigesterFtp:
-  host: "127.0.0.1"
-  port: 21
-  username: test
-  password: test
+      configuration:
+        ftp:
+          host: "127.0.0.1"
+          port: 21
+          username: test
+          password: test
