--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "description": "A small program to digest files and push the content over ftp",
     "url": "",
 
-    "main": "node_uploader.js",
+    "main": "node_uploader.coffee",
     
     "dependencies": {
+        "coffee-script": ">=1.0.0",
         "watch-tree": ">=0.1.1",
         "jsftp": ">=0.0.9",
         "config": ">=0.4.3",
